Added some text

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 	<script type="text/javascript" src="script.js"></script>
 </head>
 <body>
-
+	<p>We need some content here</p>
+	<p>This is my grand paragraph where I am adding the much needed content</p>
 </body>
 </html>
